--- a/templates/actor/actor-sheetOLD.html
+++ b/templates/actor/actor-sheetOLD.html
@@ -15,9 +15,9 @@
               <div class="resource flex-group-center">
                   <label for="data.health.value" class="resource-label">Health</label>
                   <div class="resource-content flexrow flex-center flex-between">
-                    <input type="text" name="data.health.value" value="{{data.health.value}}" data-dtype="Number"/>
+                    <input type="text" name="data.status.hp.value" value="{{data.status.hp.value}}" data-dtype="Number"/>
                     <span> / </span>
-                    <input type="text" name="data.health.max" value="{{data.health.max}}" data-dtype="Number"/>
+                    <input type="text" name="data.status.hp.max" value="{{data.status.hp.max}}" data-dtype="Number"/>
                   </div>
               </div>
               <div class="resource flex-group-center">
